--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -8,13 +8,12 @@
     --color-label-orange: 254 215 170;
     --color-label-red: 254 205 211;
 
-    /* tailwind gray-700 */
+    /* tailwind gray-700 #374151 */
     --color-text-body: 55 65 81;
-    /* tailwind gray-700 */
-    /* #374151 */
+    /* tailwind gray-700 #374151 */
     --color-text-heading: 55 65 81;
-    /* tailwind gray-700 */
-    --color-text-bold: 55 65 81;
+    /* tailwind gray-900 #111827 */
+    --color-text-bold: 17 24 39;
     /* tailwind gray-500 */
     --color-text-muted: 107 114 128;
     /* tailwind amber-500 */
